package com.equipomiguelyluis.organizador.models.utils;

public class Modelo {

    public int id = 0;
}
